--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -24,19 +24,19 @@ a {
 }
 
 .layout__head {
-  flex-grow: 0;
+  flex: 0 0 auto;
 }
 
 .layout__body {
   display: flex;
-  flex-grow: 1;
+  flex: 1 1 auto;
 }
 
 .side-menu {
-  flex-grow: 0;
+  flex: 0 0 auto;
 }
 
 .main-content {
   margin-left: 12px;
-  flex-grow: 1;
+  flex: 1 1 auto;
 }
