--- a/src/containers/village-buildings/style.less
+++ b/src/containers/village-buildings/style.less
@@ -4,17 +4,18 @@
 }
 
 .build-plan__middle-container {
-  flex-grow: 1;
-  padding-top: 24px;
+  flex: 1 1 auto;
+  margin-top: 24px;
   background: white;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  min-width: min-content;
 }
 
 .build-plan__side-bar {
-  flex-grow: 0;
+  flex: 0 0 auto;
   width: 128px;
   margin-left: 12px;
   background: white;
