--- a/src/containers/village-buildings/style.less
+++ b/src/containers/village-buildings/style.less
@@ -11,13 +11,5 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  min-width: min-content;
-}
-
-.build-plan__side-bar {
-  flex: 0 0 auto;
-  width: 128px;
-  margin-left: 12px;
-  background: white;
-  border-left: 1px solid #333333;
+  padding: 0 36px;
 }
