--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 ul {
   list-style-type: none;
   margin: 0;
@@ -20,7 +23,6 @@ a {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  box-sizing: border-box;
 }
 
 .layout__head {
@@ -30,6 +32,7 @@ a {
 .layout__body {
   display: flex;
   flex: 1 1 auto;
+  overflow: auto;
 }
 
 .side-menu {
