refactoring using mobx cont.

--- a/src/containers/village-buildings/side-bar/style.less
+++ b/src/containers/village-buildings/side-bar/style.less
@@ -34,8 +34,11 @@
   &.build-plan-aside__icon--pan {
     background-image: url("~@/assets/images/arrows-alt-solid.svg");
   }
+  &:hover {
+    opacity: 0.65;
+  }
   &.build-plan-aside__icon--disabled {
-    opacity: 0.5;
+    opacity: 0.2;
   }
 }
 .build-plan-aside__zoom-slider {
