--- a/src/containers/village-buildings/style.less
+++ b/src/containers/village-buildings/style.less
@@ -13,3 +13,72 @@
   overflow: hidden;
   padding: 0 36px;
 }
+
+// side bar
+.build-plan-aside__container {
+  flex: 0 0 auto;
+  background: white;
+  border-left: 1px solid #333333;
+}
+
+.build-plan-aside__tool-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+// slider
+.build-plan-aside__zoom-container {
+  display: flex;
+  flex: 7 7 auto;
+  justify-content: space-around;
+  align-items: center;
+  border-right: 1px solid black;
+  padding: 12px 0;
+}
+.build-plan-aside__icon {
+  width: 16px;
+  height: 16px;
+  flex: 0 0 auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  &.build-plan-aside__icon--zoom-in {
+    background-image: url("~@/assets/images/search-plus-solid.svg");
+  }
+  &.build-plan-aside__icon--zoom-out {
+    background-image: url("~@/assets/images/search-minus-solid.svg");
+  }
+  &.build-plan-aside__icon--pan {
+    background-image: url("~@/assets/images/arrows-alt-solid.svg");
+  }
+  &:hover {
+    opacity: 0.65;
+  }
+  &.build-plan-aside__icon--disabled {
+    opacity: 0.2;
+  }
+}
+.build-plan-aside__zoom-slider {
+  width: 80px;
+}
+.build-plan-aside__icon--pan {
+  flex: 2 2 auto;
+}
+
+// board
+.build-plan__board-row {
+  display: block;
+  &:not(:first-child) > .build-plan__board-cell {
+    border-top: none;
+  }
+}
+
+.build-plan__board-cell {
+  display: inline-block;
+  height: 100%;
+  padding: 0;
+  border: 1px solid black;
+  &:not(:first-child) {
+    border-left: none;
+  }
+}
