--- a/src/containers/village-buildings/style.less
+++ b/src/containers/village-buildings/style.less
@@ -18,6 +18,7 @@
   flex: 0 0 auto;
   background: white;
   border-left: 1px solid rgb(214, 214, 214);
+  padding-right: 1px;
 }
 
 .build-plan-aside__tool-bar {
@@ -25,6 +26,23 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid rgb(214, 214, 214);
+}
+
+// side-bar: placeholder
+// .build-plan-aside__placeholder-scroll {
+// }
+
+.build-plan-aside__placeholder-list {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  & > .build-plan-aside__placeholder {
+    cursor: grab;
+    border-top: none;
+    border-left: none;
+    &:nth-child(even) {
+      border-right: none;
+    }
+  }
 }
 
 // slider
@@ -85,4 +103,14 @@
   &:not(:first-child) {
     border-left: none;
   }
+}
+
+// placeholder
+.build-plan__placeholder {
+  display: inline-block;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  user-select: none;
+  border: 1px solid rgb(214, 214, 214);
 }
