--- a/src/containers/village-buildings/style.less
+++ b/src/containers/village-buildings/style.less
@@ -5,12 +5,22 @@
 
 .build-plan__middle-container {
   flex: 1 1 auto;
-  margin-top: 24px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-  border: 48px solid white;
+}
+.build-plan__tips {
+  display: flex;
+  width: 100%;
+  flex: 0 0 auto;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 5px;
+  padding: 10px 25px;
+}
+.build-plan__tips_content {
+  margin: 0;
 }
 
 // side bar
@@ -20,17 +30,6 @@
   border-left: 1px solid rgb(214, 214, 214);
   padding-right: 1px;
 }
-
-.build-plan-aside__tool-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid rgb(214, 214, 214);
-}
-
-// side-bar: placeholder
-// .build-plan-aside__placeholder-scroll {
-// }
 
 .build-plan-aside__placeholder-list {
   display: grid;
@@ -46,12 +45,11 @@
 }
 
 // slider
-.build-plan-aside__zoom-container {
+.build-plan-aside__tool-bar {
   display: flex;
-  flex: 7 7 auto;
   justify-content: space-around;
   align-items: center;
-  border-right: 1px solid rgb(214, 214, 214);
+  border-bottom: 1px solid rgb(214, 214, 214);
   padding: 12px 0;
 }
 .build-plan-aside__icon {
@@ -65,9 +63,6 @@
   }
   &.build-plan-aside__icon--zoom-out {
     background-image: url("~@/assets/images/search-minus-solid.svg");
-  }
-  &.build-plan-aside__icon--pan {
-    background-image: url("~@/assets/images/arrows-alt-solid.svg");
   }
   &:hover {
     opacity: 0.65;
@@ -84,8 +79,14 @@
 }
 
 // board
+.build-plan__board-frame {
+  max-height: 100%;
+  overflow: hidden;
+  border: 8px solid rgb(214, 214, 214);
+}
 .build-plan__board {
   background: white;
+  padding: 24px;
 }
 
 .build-plan__board-row {
