--- a/src/containers/village-buildings/style.less
+++ b/src/containers/village-buildings/style.less
@@ -10,108 +10,32 @@
   justify-content: center;
   align-items: center;
 }
+
 .build-plan__tips {
   display: flex;
   width: 100%;
+  height: 54px;
   flex: 0 0 auto;
   align-items: center;
   justify-content: space-between;
   margin-top: 5px;
   padding: 10px 25px;
 }
-.build-plan__tips_content {
+
+.build-plan__tips-button {
+  font-size: 14px;
+  &:not(:first-child) {
+    margin-left: 40px;
+  }
+}
+
+.build-plan__tips-content {
   margin: 0;
 }
 
-// side bar
-.build-plan-aside__container {
-  flex: 0 0 auto;
-  background: white;
-  border-left: 1px solid rgb(214, 214, 214);
-  padding-right: 1px;
-}
-
-.build-plan-aside__placeholder-list {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  & > .build-plan-aside__placeholder {
-    cursor: grab;
-    border-bottom: 1px solid rgb(214, 214, 214);
-    border-right: 1px solid rgb(214, 214, 214);
-    &:nth-child(even) {
-      border-right: none;
-    }
-  }
-}
-
-// slider
-.build-plan-aside__tool-bar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border-bottom: 1px solid rgb(214, 214, 214);
-  padding: 12px 0;
-}
-.build-plan-aside__icon {
-  width: 16px;
-  height: 16px;
-  flex: 0 0 auto;
-  background-position: center;
-  background-repeat: no-repeat;
-  &.build-plan-aside__icon--zoom-in {
-    background-image: url("~@/assets/images/search-plus-solid.svg");
-  }
-  &.build-plan-aside__icon--zoom-out {
-    background-image: url("~@/assets/images/search-minus-solid.svg");
-  }
-  &:hover {
-    opacity: 0.65;
-  }
-  &.build-plan-aside__icon--disabled {
-    opacity: 0.2;
-  }
-}
-.build-plan-aside__zoom-slider {
-  width: 80px;
-}
-.build-plan-aside__icon--pan {
-  flex: 2 2 auto;
-}
-
-// board
 .build-plan__board-frame {
   max-height: 100%;
+  flex: 1 1 auto;
   overflow: hidden;
   border: 8px solid rgb(214, 214, 214);
-}
-.build-plan__board {
-  background: white;
-  padding: 24px;
-}
-
-.build-plan__board-row {
-  display: block;
-  &:not(:first-child) > .build-plan__board-cell {
-    border-top: none;
-  }
-}
-
-.build-plan__board-cell {
-  display: inline-flex;
-  overflow: hidden;
-  height: 100%;
-  padding: 0;
-  border: 1px solid black;
-  &:not(:first-child) {
-    border-left: none;
-  }
-}
-
-// placeholder
-.build-plan__placeholder {
-  display: inline-block;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  user-select: none;
 }
