--- a/src/components/buttons/style.less
+++ b/src/components/buttons/style.less
@@ -5,24 +5,40 @@
   border-radius: 2px;
   height: 34px;
   line-height: 34px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  will-change: box-shadow;
+  transition: box-shadow .2s cubic-bezier(.4,0,1,1),background-color .2s cubic-bezier(.4,0,.2,1),color .2s cubic-bezier(.4,0,.2,1);
+  &:active {
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
+  }
+  &:focus:not(:active) {
+    box-shadow: 0 0 8px rgba(0,0,0,.18), 0 8px 16px rgba(0,0,0,.36);
+  }
+  &:hover {
+    opacity: 0.8
+  }
+  &:focus,
+  &:active {
+    opacity: 0.5;
+  }
 }
 
 .lt-button--default {
   color: black;
   background: #E7E7E7;
-  font-weight: 500;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-  will-change: box-shadow;
-  transition: box-shadow .2s cubic-bezier(.4,0,1,1),background-color .2s cubic-bezier(.4,0,.2,1),color .2s cubic-bezier(.4,0,.2,1);
-  &:hover {
-    background-color: rgba(158,158,158,.2);
-  }
-  &:active {
-    box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
-    background-color: rgba(158,158,158,.4)
-  }
-  &:focus:not(:active) {
-    box-shadow: 0 0 8px rgba(0,0,0,.18), 0 8px 16px rgba(0,0,0,.36);
-    background-color: rgba(158,158,158,.4);
-  }
+  // &:hover {
+  //   background-color: rgba(158,158,158,.2);
+  // }
+  // &:focus,
+  // &:active {
+  //   background-color: rgba(158,158,158,.4)
+  // }
+}
+
+.lt-button--warning {
+  color: #fff;
+  background-color: #ff4081;
+  // &:active {
+  //   background-color: rgba(158,158,158,.4);
+  // }
 }
