--- a/src/containers/village-buildings/side-bar/style.less
+++ b/src/containers/village-buildings/side-bar/style.less
@@ -5,7 +5,9 @@
   border-left: 1px solid rgb(214, 214, 214);
   padding-right: 1px;
 }
-
+.build-plan-aside__placeholder-scroll {
+  overflow: hidden;
+}
 .build-plan-aside__placeholder-list {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -22,10 +24,20 @@
 
 .build-plan-aside__tool-bar {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   border-bottom: 1px solid rgb(214, 214, 214);
   padding: 12px 0;
+}
+.build-plan-aside__zoom {
+  display: flex;
+  flex: 7 7 auto;
+  justify-content: space-around;
+  align-items: center;
+  border-right: 1px solid rgb(214, 214, 214);
+}
+.build-plan-aside__filter {
+  display: flex;
+  justify-content: center;
+  flex: 3 3 auto;
 }
 .build-plan-aside__icon {
   width: 16px;
@@ -34,10 +46,16 @@
   background-position: center;
   background-repeat: no-repeat;
   &.build-plan-aside__icon--zoom-in {
-    background-image: url("~@/assets/images/search-plus-solid.svg");
+    background-image: url("~@/assets/images/zoom-in.svg");
   }
   &.build-plan-aside__icon--zoom-out {
-    background-image: url("~@/assets/images/search-minus-solid.svg");
+    background-image: url("~@/assets/images/zoom-out.svg");
+  }
+  &.build-plan-aside__icon--filter {
+    background-image: url("~@/assets/images/filter.svg");
+    &.active {
+      background-image: url("~@/assets/images/filter-active.svg");
+    }
   }
   &:hover {
     opacity: 0.65;
