--- a/src/containers/village-buildings/side-bar/filters/style.less
+++ b/src/containers/village-buildings/side-bar/filters/style.less
@@ -4,6 +4,7 @@
   width: 200px;
   left: 0;
   top: 0;
+  border: 2px solid rgb(214, 214, 214);
   transform: translateX(-200px);
   transition: transform 0.5s;
 }
@@ -31,4 +32,22 @@
   &:hover {
     opacity: 0.6;
   }
+}
+.filter-modal__section {
+  padding: 12px;
+  border-bottom: 1px solid rgb(214, 214, 214);
+}
+.filter-modal__section-title {
+  margin: 0;
+  font-size: 14px;
+}
+.filter-modal__section-header {
+  border-bottom: 1px solid rgb(214, 214, 214);
+}
+.filter-modal__section-content {
+  font-size: 12px;
+  margin-left: -8px;
+}
+.filter-modal__checkbox {
+  margin-left: 8px;
 }
