add type to filter bar

--- a/src/containers/village-buildings/side-bar/filters/style.less
+++ b/src/containers/village-buildings/side-bar/filters/style.less
@@ -20,11 +20,11 @@
 }
 .filter-modal__header-text {
   margin: 0px;
-  padding: 10px 15px;
+  padding: 8px 15px;
 }
 .filter-modal__header-icon--close {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   flex: 0 0 auto;
   margin-right: 10px;
   background-image: url("~@/assets/images/close.svg");
@@ -34,7 +34,7 @@
   }
 }
 .filter-modal__section {
-  padding: 12px;
+  padding: 4px 12px;
   border-bottom: 1px solid rgb(214, 214, 214);
 }
 .filter-modal__section-title {
@@ -45,6 +45,7 @@
   border-bottom: 1px solid rgb(214, 214, 214);
 }
 .filter-modal__section-content {
+  margin-top: 2px;
   font-size: 12px;
   margin-left: -8px;
 }
