--- a/src/containers/village-buildings/placeholder/style.less
+++ b/src/containers/village-buildings/placeholder/style.less
@@ -1,6 +1,15 @@
 .build-plan__placeholder {
   text-align: center;
-  font-size: 20px;
-  font-weight: bold;
   user-select: none;
+  font-weight: bold;
+  &.large {
+    font-size: 24px;
+  }
+  &.medium {
+    font-size: 20px;
+  }
+  &.small {
+    font-weight: normal;
+    font-size: 14px;
+  }
 }
